<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:paddingBottom="5dp"
        android:src="@mipmap/ic_launcher"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/searchDialogTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@id/image1"
        android:layout_toEndOf="@+id/image1"
        android:layout_toRightOf="@+id/image1"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:text="@string/timetableInfo"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/timetableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchDialogDetails"
        android:layout_toStartOf="@+id/backButton"
        android:background="@drawable/rounded_corners"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/openTimetableContents"
        android:textSize="24sp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchDialogDetails"
        android:layout_alignParentRight="true"
        android:background="@drawable/rounded_corners"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/closeTimetableDialog"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/searchDialogDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchDialogTitle"
        android:text="@string/dialogTextView"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>