<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="99dp"
        android:layout_height="93dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="TODO"
        android:src="@mipmap/ic_launcher"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/contentsDialogTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/image1"
        android:layout_toRightOf="@+id/image1"
        android:paddingBottom="5dp"
        android:text="@string/EventName"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/navButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/closeContentsButton"
        android:background="@drawable/rounded_corners_white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/navButton" />

    <Button
        android:id="@+id/closeContentsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_corners_white"
        android:text="@string/closeTimetableDialog" />

    <TextView
        android:id="@+id/contentsDialogDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navButton"
        android:layout_below="@+id/contentsDialogTitle"
        android:layout_alignBottom="@+id/navButton"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/image1"
        android:text="@string/EventDetails"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>